# coven

./: LICENSE  README.md  meson.build
include/common/: linux.h  net.h  util.h
include/daemon/: event.h  instance.h  log.h  supervisor.h
src/: meson.build
src/common/: meson.build
src/common/linux/: meson.build  syscall.c
src/common/net/: meson.build  socket.c
src/common/util/: meson.build  signal.c
src/daemon/: main.c  meson.build
src/daemon/event/: ipc.c  meson.build  signal.c
src/daemon/instance/: signal.c
src/daemon/log/: core.c  deserialize.c  meson.build
src/daemon/supervisor/: core.c  ipc.c  loop.c  meson.build  watch.c
